--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 
 interface Props {
@@ -28,6 +29,6 @@ const { title, description } = Astro.props;
 		</div>
 		<Header />
 		<slot />
-		<footer>FOOTER</footer>
+		<Footer /> 
 	</body>
 </html>
