--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import SocialPill from "./SocialPill.astro";
         class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
     >
         +5 años de experiencia. <strong
-            >Técnico Superior en Desarrollo de Apliaciones Web</strong
+            >Técnico Superior en Desarrollo de Aplicaiones Web</strong
         > de Valencia, España 🇪🇸. Apasionado por la tecnología y el desarrollo de
         soluciones innovadoras.
     </p>
