add icons to Hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,8 @@
 ---
 import Badge from "./Badge.astro";
 import SocialPill from "./SocialPill.astro";
+import LinkedIn from "./icons/LinkedIn.astro";
+import Github from "./icons/Github.astro";
 ---
 
 <section class="max-w-full">
@@ -31,9 +33,11 @@ import SocialPill from "./SocialPill.astro";
     <nav>
         <nav class="flex flex-wrap gap-4 mt-8">
             <SocialPill href="https://github.com/JoseVteRS">
+                <Github />
                 Github
             </SocialPill>
             <SocialPill href="https://www.linkedin.com/in/jose-vte-ripoll-solanes-44920250/">
+                <LinkedIn />
                 LinkedIn
             </SocialPill>
         </nav>
