--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Experience from "../components/Experience.astro";
 			<Hero />
 		</SectionContainer>
 
-		<SectionContainer>
+		<SectionContainer id="experiencia">
 			<h2
 				class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
 			>
