--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,8 +6,8 @@ const EXPERIENCIE = [
         title: "Diseñador y Desarrollador web",
         company: "Acrismatic",
         description:
-            "Desarrollo a medida de diversos temas wordpress para las webs del grupo. Mejorando la calidad del código. Dejando de depender de builders. Demás de herramientas para agilizar el trabajo interno del departamento",
-        link: "https://acrismatic.es",
+            "Desarrollo a medida de diversos temas de WordPress para las webs del grupo, mejorando la calidad del código, dejando de depender de constructores, además de herramientas desarrolladas en React para agilizar el trabajo interno del departamento.",
+        isCurrent: true,
     },
     {
         date: "2016-2017",
@@ -15,7 +15,7 @@ const EXPERIENCIE = [
         company: "Tictactickets",
         description:
             "Desarrollo de la página de la Tomatina para vender tickets. ",
-        link: "https://tomatina.es/",
+        isCurrent: false,
     },
 ];
 ---
