--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ const navItems = [
 		{
 			navItems.map((link) => (
 				<a
-					class="relative block px-2 py-2 transition hover:text-blue-500 dark:hover:text-blue-400"
+					class="relative block px-2 py-2 transition hover:text-yellow-500 dark:hover:text-yellow-400"
 					aria-label={link.label}
 					href={link.url}
 				>
@@ -37,10 +37,9 @@ const navItems = [
 		}
 	</nav>
 </header>
-
 <script>
 	document.addEventListener("astro:page-load", () => {
-		const sections = document.querySelectorAll("sections");
+		const sections = document.querySelectorAll("section");
 		const navItems = document.querySelectorAll("header nav a");
 
 		const callback = (entries: any[]) => {
@@ -50,9 +49,9 @@ const navItems = [
 						if (
 							item.getAttribute("aria-label") == entry.target.id
 						) {
-							item.classList.add("text-blue-500");
+							item.classList.add("text-yellow-500");
 						} else {
-							item.classList.remove("text-blue-500");
+							item.classList.remove("text-yellow-500");
 						}
 					});
 				}
@@ -66,9 +65,10 @@ const navItems = [
 		});
 
 		sections.forEach((section) => {
-			observer.disconnect();
+			observer.observe(section);
 		});
 
+		// Cleanup function
 		document.onvisibilitychange = () => {
 			if (document.visibilityState === "hidden") {
 				observer.disconnect();
