--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,11 +23,11 @@ import Github from "./icons/Github.astro";
         Hola, soy Jose Vte
     </h1>
     <p
-        class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+        class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-sky-600 [&>strong]:text-gray-800 [&>strong]:font-semibold dark:text-gray-300"
     >
-        +5 años de experiencia. <strong
-            >Técnico Superior en Desarrollo de Aplicaiones Web</strong
-        > de Valencia, España 🇪🇸. Apasionado por la tecnología y el desarrollo de
+        Más de 5 años de experiencia. <strong
+            >Técnico Superior en Desarrollo de Aplicaciones Web</strong
+        >, de Valencia, España 🇪🇸. Apasionado por la tecnología y el desarrollo de
         soluciones innovadoras.
     </p>
     <nav>
