--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -22,7 +22,7 @@
             >.
         </p>
         <p>
-            He logrado que sea <strong>mantenible y escalable</strong>, gracias
+            He logrado que sea <strong>sostenible y escalable</strong>, gracias
             a la utilización de <strong
                 >buena prácticas y principios SOLID</strong
             > en PHP.
