fix styles in light mode

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -54,7 +54,7 @@ const PROJECTS = [
     }
 </div>
 
-<div class="bg-zinc-800/40 rounded-xl py-5 px-6 mt-12">
+<div class="bg-zinc-100 dark:bg-zinc-800/40 rounded-xl py-5 px-6 mt-12">
     <div class=" flex flex-col justify-center items-center">
         <span class="text-xl font-bold">Pronto más proyectos.</span>
         <span class="text-xl">Los estoy migrando de servidor</span>
