--- a/src/components/BadgeInfo.astro
+++ b/src/components/BadgeInfo.astro
@@ -1,3 +1,6 @@
-<div class="relative inline-flex overflow-hidden rounded-full py-1 px-2 border border-gray-300 bg-gray-800 text-xs">
+<div
+    class="relative inline-flex overflow-hidden rounded-full py-1 px-2
+    border border-gray-50 bg-gray-300 text-gray-800 dark:text-gray-100 dark:border-gray-500 dark:bg-gray-800 text-xs"
+>
     <slot />
 </div>
