--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
 ---
+import DownloadCVButton from "./DownloadCVButton.astro";
+
 const navItems = [
 	{
 		title: "Experiencia",
@@ -36,6 +38,7 @@ const navItems = [
 			))
 		}
 	</nav>
+	<DownloadCVButton> Descarga mí CV </DownloadCVButton>
 </header>
 <script>
 	document.addEventListener("astro:page-load", () => {
