--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,5 +34,30 @@ const currentYear = new Date().getFullYear();
                 <a id="LinkedIn" href="#" class="hover:underline">LinkedIn</a>
             </li>
         </ul>
+        <div id="last-commit" class="text-xs text-neutral-500"></div>
     </div>
 </footer>
+
+<script>
+    const $lastCommit = document.querySelector(
+        "#last-commit",
+    ) as HTMLDivElement;
+    const fetchLastCommit = async () => {
+        const response = await fetch(
+            "https://api.github.com/repos/JoseVteRS/josevte.com/commits?per_page=1",
+        );
+        const data = await response.json();
+        if (data.length > 0) {
+            const lastCommit = data[0];
+            const commitDate = new Date(
+                lastCommit.commit.author.date,
+            ).toLocaleDateString("es-ES");
+
+            return commitDate 
+        }
+    };
+
+    fetchLastCommit().then((dateString) => {
+        $lastCommit.innerHTML = `Última actualización: ${dateString}`;
+    });
+</script>
