--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,38 +3,48 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-    class="opacity-80 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl flex justify-center"
+    class="opacity-80 mt-16 container mx-auto px-4 md:p-0 lg:max-w-4xl md:max-w-2xl flex justify-center"
 >
-    <div
-        class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
-    >
-        <span
-            class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
-            >© {currentYear}
-            <a href="https://josevte.com/" class="hover:underline">josevte</a>
-        </span>
-        <span
-            class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+    <div class="rounded-lg w-full max-w-screen-xl mx-auto py-4">
+        <div
+            class="flex items-center justify-between md:justify-between space-x-3 md:flex-row"
         >
-            Porfolio inspirado en el de <a
-                href="https://twitch.tv/midudev"
-                target="_blank"
-                rel="noopener">@midudev</a
-            >
-        </span>
-        <ul
-            class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
-        >
-            <li>
-                <a href="/#sobre-mi" class="hover:underline me-4 md:me-6"
-                    >Sobre mí</a
+            <span
+                class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+                >© {currentYear}
+                <a href="https://josevte.com/" class="hover:underline"
+                    >josevte</a
                 >
-            </li>
-            <li>
-                <a id="LinkedIn" href="#" class="hover:underline">LinkedIn</a>
-            </li>
-        </ul>
-        <div id="last-commit" class="text-xs text-neutral-500"></div>
+            </span>
+
+            <ul
+                class="flex flex-wrap items-center text-sm font-medium dark:text-white/90 sm:mt-0"
+            >
+                <li>
+                    <a href="/#sobre-mi" class="hover:underline me-4 md:me-6"
+                        >Sobre mí</a
+                    >
+                </li>
+                <li>
+                    <a id="LinkedIn" href="#" class="hover:underline"
+                        >LinkedIn</a
+                    >
+                </li>
+            </ul>
+        </div>
+
+        <div
+            class="flex flex-col md:flex-row md:justify-between space-y-1 items-center mt-3"
+        >
+            <span class="text-xs text-neutral-500">
+                Porfolio inspirado en el de <a
+                    href="https://twitch.tv/midudev"
+                    target="_blank"
+                    rel="noopener">@midudev</a
+                >
+            </span>
+            <span id="last-commit" class="text-xs text-neutral-500"></span>
+        </div>
     </div>
 </footer>
 
@@ -53,7 +63,7 @@ const currentYear = new Date().getFullYear();
                 lastCommit.commit.author.date,
             ).toLocaleDateString("es-ES");
 
-            return commitDate 
+            return commitDate;
         }
     };
 
