fix: typo in link rel

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ const PDF_FILENAME = `Jose-Vte-Ripoll-Solanes-${TODAY}`
         <a
             href="https://www.linkedin.com/in/jose-vte-ripoll-solanes-44920250/"
             target="_blank"
-            rel="noopener noreferer"
+            rel="noopener noreferrer"
             class="flex items-center transition md:justify-center md:hover:scale-105"
         >
             <Badge> Disponible para trabajar </Badge>
@@ -58,7 +58,7 @@ const PDF_FILENAME = `Jose-Vte-Ripoll-Solanes-${TODAY}`
                 })
             }
             <DownloadCVButton>
-                <a download={`${PDF_FILENAME}.pdf`} href="/curriculum" target="_blank" rel="noopener noreferer">Descarga mí CV</a>
+                <a download={`${PDF_FILENAME}.pdf`} href="/curriculum" target="_blank" rel="noopener noreferrer">Descarga mí CV</a>
             </DownloadCVButton>
         </nav>
     </nav>
