fix: update Hero component to reflect availability status

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,14 +26,14 @@ const PDF_FILENAME = `Jose-Vte-Ripoll-Solanes-${TODAY}`
             alt={basics.name}
         />
 
-        <a
+        <!-- <a
             href="https://www.linkedin.com/in/jose-vte-ripoll-solanes-44920250/"
             target="_blank"
             rel="noopener noreferrer"
             class="flex items-center transition md:justify-center md:hover:scale-105"
         >
-            <Badge> Disponible para trabajar </Badge>
-        </a>
+            <Badge>No disponible para trabajar </Badge>
+        </a> -->
     </div>
     <h1
         class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
